# detectors

./: .gitignore  README.md  geometry.pl
atlas/: atlas.gcard  cad.gxml
basic_examples/: README_basic_examples.txt
bdx/: README  bank.pl  bdx.gcard  bdx.pl  geometry.pl  hit.pl  materials.pl
clas12/: README.md  clas12_configuration_string.pm  install_coatjava.sh  update-coat-libs.sh  update.sh
clas12/RTPC/: RTPC.pl  bank.pl  bonus.gcard  bonus.pl  hit.pl
clas12/alert/: .gitignore  README.md  ahdc_test_june2020.txt  alert.gcard  alert_allFromRecoGeom.gcard  alert_allFromRecoGeom_june2020.txt  alert_clas12.gcard  build_all.sh  myatof_test_juin2020.txt  ten_events.hipo
clas12/atof/: aftof__bank.txt  aftof__hit_default.txt  aftof__materials_default.txt  atof.pl  bank.pl  geometry_java.pl  hit.pl  materials.pl
clas12/band/: band.gcard  band.pl  bank.pl  beampipe__geometry_main.txt  geometry.pl
clas12/beamline/: ELMOline.pl  ELMOlineNew.pl  README.md  TUNGSTEN_PIPE_MZ.igs  TaggerConstruction.cc  (+40 more)
forFun/: cad.gxml  fun.gcard  sphere.gxml
hps/: GeometryEngine.py  GeometryROOT.py  Rotations.py  ShowGeometry.py  TestRoot.py  Write_HPS.py  hps_2014.gcard  hps_2014_mysql.gcard
humanBody/: hb.gcard
injector/: BeamPipe.pl  BubbleChamberCell.pl  Collimator.pl  GammaBeamWindow.pl  GammaPort.pl  PhotonDump.pl  Radiator.pl  bank.pl  beamline.pl  bubble.gcard  bubbleChamber.pl  bubble__parameters_original.txt  collimator.pl  geometry.pl  hit.pl  materials.pl  radiator.pl
phyTests/axial_neutrons/: CMakeLists.txt  README.md  ax_n.gcard  ax_n.pl  geometry.pl  neutrons.cc
(+861 files in other folders)
